istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: muffin-wallet-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - wallet.example.com
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: muffin-wallet-vs
  namespace: default
spec:
  hosts:
    - wallet.example.com
  gateways:
    - muffin-wallet-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: muffin-wallet
            port:
              number: 80
